# Ting

./: .clangd  .gitignore  CMakeLists.txt  README.md  build.ps1  clangd.ps1  clean-build.ps1  imgui.ini  run.ps1
.cursor/rules/: .cursorrules
Dependancies/GLAD/: glad.c  glad.h
Source/: Application.cpp  Application.hpp  Main.cpp
Source/Graphics/: OpenGlContext.cpp  OpenGlContext.hpp
Source/Logger/: Logger.cpp  Logger.hpp
Source/Macro/MacroManager/: MacroManager.cpp
Source/MacroManager/: MacroManager.hpp
Source/Platform/: GlfwBootstrap.cpp  GlfwBootstrap.hpp  GlfwWindow.cpp  GlfwWindow.hpp
Source/SettingsManager/: SettingsManager.cpp  SettingsManager.hpp
Source/Ui/: AppUi.cpp  AppUi.hpp  ImGuiLayer.cpp  ImGuiLayer.hpp
Source/Ui/HeaderUi/: HeaderUi.cpp  HeaderUi.hpp
